[package]
name = "geaflow-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
geaflow-api = { path = "../geaflow-api" }
geaflow-common = { path = "../geaflow-common" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dashmap = "5.5" # For in-memory state
log = "0.4"
env_logger = "0.10"
rayon = "=1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rocksdb = "0.21"
tempfile = "3.10"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
